# CR-87

./: .gitignore  ENVIRONMENT  ENVIRONMENT.md  README.md  TODO.txt  args.gn  build.sh  build_win.sh  setup.sh  trunk.sh  version.sh  win_args.gn
83/: args.gn
depot_tools/: autoninja
infra/: depot_tools_refs.txt  run.sh
infra/flash_player/linux/PepperFlash/_platform_specific/: manifest.json
infra/flash_player/win/PepperFlash/_platform_specific/: LICENSE  manifest.json
src/chrome/: BUILD.gn
src/chrome/app/: chrome_command_ids.h
src/chrome/app/theme/chromium/linux/: product_logo_32.xpm
src/chrome/browser/: about_flags.cc  thorium_flag_choices.h  thorium_flag_entries.h
src/chrome/browser/permissions/: quiet_notification_permission_ui_state.cc
src/chrome/browser/ui/: browser_command_controller.cc  browser_commands.cc  browser_commands.h  browser_ui_prefs.cc
src/chrome/browser/ui/startup/: default_browser_prompt.cc
src/chrome/browser/ui/toolbar/: chrome_location_bar_model_delegate.cc
src/chrome/browser/ui/views/: accelerator_table.cc
src/chrome/browser/ui/views/toolbar/: reload_button.cc  reload_button.h
src/chrome/installer/linux/common/: apt.include  installer.include  repo.cron  wrapper
src/chrome/installer/linux/debian/: postinst  prerm
src/chrome/installer/mini_installer/: chrome.release
src/extensions/browser/: ui_util.cc
src/sandbox/linux/: BUILD.gn
src/tools/v8_context_snapshot/: BUILD.gn
