google_api_key = "AIzaSyBOti4mM-6x9WDnZIjIeyEU21OpBXqWBgw"
google_default_client_id = "77185425430.apps.googleusercontent.com"
google_default_client_secret = "OTJgUOQcT7lO7GsGZq2G4IlT"
target_os = "linux"
target_cpu = "x64"
enable_linux_installer = true
enable_distro_version_check = false
is_official_build = true
is_debug = false
dcheck_always_on = false
enable_debugallocation = false
enable_iterator_debugging = false
enable_profiling = false
is_component_build = false
symbol_level = 0
#sanitizer_no_symbols = true
strip_debug_info = true
enable_nacl = false
optimize_webui = true
use_lld = true
blink_symbol_level = 0
#remove_webcore_debug_symbols = true
enable_precompiled_headers = false
media_use_ffmpeg = true
media_use_libvpx = true
enable_hls_sample_aes = true
proprietary_codecs = true
ffmpeg_branding = "Chrome"
enable_ffmpeg_video_decoders = true
is_component_ffmpeg = true
use_webaudio_ffmpeg = false
#enable_media_overlay = true
enable_widevine = true
#bundle_widevine_cdm = true
#should_bundle_widevine_cdm = true
enable_cdm_host_verification = false
use_vaapi = true
use_vr_assets_component = true
enable_hangout_services_extension = true
rtc_use_h264 = true
rtc_include_ilbc = true
enable_vr = true
enable_mse_mpeg2ts_stream_parser = true
use_thin_lto = true
thin_lto_enable_optimizations = true
